--- a/src/components/ProductList/ProductList.css
+++ b/src/components/ProductList/ProductList.css
@@ -8,3 +8,41 @@
     overflow-x: scroll;
   }
   
+  .SearchCocktails {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-bottom: 20px;
+  }
+  
+  .SearchCocktails input {
+    padding: 10px;
+    width: 300px;
+    background: none;
+    border: 2px solid #ccc;
+    border-radius: 5px;
+    box-sizing: border-box;
+    font-size: 16px;
+    outline: none;
+    margin-bottom: 5px;
+  }
+  
+  .SearchCocktails button {
+    padding: 10px;
+    background: #ffd52d;
+    color: #19161c;
+    border: none;
+    border-radius: 5px;
+    margin-left: 10px;
+    font-size: 16px;
+    cursor: pointer;
+  }
+  
+  .SearchCocktails button:hover {
+    background: #f5c100;
+  }
+  
+  .SearchCocktails .error {
+    margin-top: 5px;
+    color: red;
+  }
