feature/fix product section close

--- a/src/components/ProductSection/ProductSection.css
+++ b/src/components/ProductSection/ProductSection.css
@@ -1,6 +1,11 @@
+.ProductSection{
+    position: relative;
+}
+
 .ProductSection p{
     font-size: 0.9rem;
     color: gray;
+    pos
 }
 
 .ProductSection__text{
